@startuml modelo-clases
skinparam classAttributeIconSize 0

abstract class Usuario {
  - id: String
  - nombre: String
  - correo: String
}

class Estudiante {
  + agregarReserva(reserva: Reserva): void
  + consultarTutorias(): List<Reserva>
}

class Docente {
  + publicarHorario(horario: HorarioTutoria): void
  + gestionarDisponibilidad(horarioId: String, disponible: boolean): void
  + consultarHorariosDisponibles(): List<HorarioTutoria>
}

class HorarioTutoria {
  - id: String
  - fecha: LocalDate
  - horaInicio: LocalTime
  - horaFin: LocalTime
  - disponible: boolean
  + verificarDisponibilidad(): boolean
  + reservar(): void
  + liberar(): void
}

class Asignatura {
  - id: String
  - nombre: String
}

class Reserva {
  - id: String
  - estado: EstadoReserva
  - estudiante: Estudiante
  - horario: HorarioTutoria
  - asignatura: Asignatura
  + confirmar(): void
  + cancelar(): void
  + marcarRealizada(): void
  + reprogramar(nuevoHorario: HorarioTutoria): void
}

enum EstadoReserva {
  PENDIENTE
  CONFIRMADA
  CANCELADA
  REALIZADA
}

class ServicioReservas {
  + crearReserva(estudiante: Estudiante, horario: HorarioTutoria, asignatura: Asignatura): Reserva
  + confirmarReserva(reservaId: String): void
  + cancelarReserva(reservaId: String): void
}

interface Notificador {
  + enviarNotificacion(destinatario: String, mensaje: String): void
}

class NotificadorCorreo {
  + enviarNotificacion(destinatario: String, mensaje: String): void
}

interface RepositorioReservas {
  + guardar(reserva: Reserva): void
  + buscar(id: String): Reserva
  + actualizar(reserva: Reserva): void
}

class RepositorioReservasMemoria {
  + guardar(reserva: Reserva): void
  + buscar(id: String): Reserva
  + actualizar(reserva: Reserva): void
}

Usuario <|-- Estudiante
Usuario <|-- Docente

Estudiante "1" -- "0..*" Reserva : realiza
Docente "1" -- "0..*" HorarioTutoria : publica
Reserva "0..1" -- "1" HorarioTutoria : se asigna a
Reserva "0..*" -- "1" Asignatura : corresponde a
Reserva ..> EstadoReserva

ServicioReservas ..> Notificador
ServicioReservas ..> RepositorioReservas

NotificadorCorreo ..|> Notificador
RepositorioReservasMemoria ..|> RepositorioReservas

@enduml
